feat: 可视化权限交互